--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -6,9 +6,7 @@
     <div class="row">
         <div class="col-12 mb-4">
             <div class="form-floating">
-                <input type="number" [(ngModel)]="sesion.usuario.identificacion"
-                    oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control"
-                    id="floatingInput">
+                <input type="number" [(ngModel)]="sesion.usuario.identificacion" placeholder="" class="form-control" id="floatingInput">
                 <label for="floatingInput" class="color-label">Identificacion</label>
             </div>
         </div>
