--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -11,6 +11,10 @@
     color: #496bb7;
 }
 
+.color-label{
+  color: #2b4a99;
+}
+
 .font-size-tittle {
     font-family: 'Baloo 2', cursive;
     font-size: 30px;
