--- a/src/app/inicio-slide/inicio-slide.component.html
+++ b/src/app/inicio-slide/inicio-slide.component.html
@@ -1,48 +1,50 @@
 <div #carousel id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-      </div>
-    <ng-container *ngIf="bandera">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="{{prefijoUrlImagenes+inicioSlide[0].valor}}" class="d-block w-100 esp-img-responsive">
-                <div class="carousel-caption d-md-block esp-div">
-                    <h2 class="font-tittle">{{tituloSlide[0]}}</h2>
-                    <p class="font-description">{{descripcionSlide[0]}}</p>
-                    <button mat-raised-button class="esp-button font-button font-color"
-                        (click)="ingresar()">Ingresar</button>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="{{prefijoUrlImagenes+inicioSlide[1].valor}}" class="d-block w-100 esp-img-responsive">
-                <div class="carousel-caption d-md-block esp-div">
-                    <h2 class="font-tittle">{{tituloSlide[1]}}</h2>
-                    <p class="font-description">{{descripcionSlide[1]}}</p>
-                    <button mat-raised-button class="esp-button font-button font-color"
-                        (click)="ingresar()">Ingresar</button>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="{{prefijoUrlImagenes+inicioSlide[2].valor}}" class="d-block w-100 esp-img-responsive">
-                <div class="carousel-caption d-md-block esp-div">
-                    <h2 class="font-tittle">{{tituloSlide[2]}}</h2>
-                    <p class="font-description">{{descripcionSlide[2]}}</p>
-                    <button mat-raised-button class="esp-button font-button font-color"
-                        (click)="ingresar()">Ingresar</button>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="{{prefijoUrlImagenes+inicioSlide[3].valor}}" class="d-block w-100 esp-img-responsive">
-                <div class="carousel-caption d-md-block esp-div">
-                    <h2 class="font-tittle">{{tituloSlide[3]}}</h2>
-                    <p class="font-description">{{descripcionSlide[3]}}</p>
-                    <button mat-raised-button class="esp-button font-button font-color"
-                        (click)="ingresar()">Ingresar</button>
-                </div>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{{prefijoUrlImagenes+inicioSlide[0]}}" class="d-block w-100 esp-img-responsive">
+            <div class="carousel-caption d-md-block esp-div">
+                <h2 class="font-tittle">{{tituloSlide[0]}}</h2>
+                <p class="font-description">{{descripcionSlide[0]}}</p>
+                <button mat-raised-button class="esp-button font-button font-color"
+                    (click)="ingresar()">Ingresar</button>
             </div>
         </div>
-    </ng-container>
+        <div class="carousel-item">
+            <img src="{{prefijoUrlImagenes+inicioSlide[1]}}" class="d-block w-100 esp-img-responsive">
+            <div class="carousel-caption d-md-block esp-div">
+                <h2 class="font-tittle">{{tituloSlide[1]}}</h2>
+                <p class="font-description">{{descripcionSlide[1]}}</p>
+                <button mat-raised-button class="esp-button font-button font-color"
+                    (click)="ingresar()">Ingresar</button>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{{prefijoUrlImagenes+inicioSlide[2]}}" class="d-block w-100 esp-img-responsive">
+            <div class="carousel-caption d-md-block esp-div">
+                <h2 class="font-tittle">{{tituloSlide[2]}}</h2>
+                <p class="font-description">{{descripcionSlide[2]}}</p>
+                <button mat-raised-button class="esp-button font-button font-color"
+                    (click)="ingresar()">Ingresar</button>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{{prefijoUrlImagenes+inicioSlide[3]}}" class="d-block w-100 esp-img-responsive">
+            <div class="carousel-caption d-md-block esp-div">
+                <h2 class="font-tittle">{{tituloSlide[3]}}</h2>
+                <p class="font-description">{{descripcionSlide[3]}}</p>
+                <button mat-raised-button class="esp-button font-button font-color"
+                    (click)="ingresar()">Ingresar</button>
+            </div>
+        </div>
+    </div>
 </div>
